--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Embedded Picture</title>
+  <meta charset="UTF-8">
+  <title>Meow Cat</title>
+
+  <!-- Open Graph meta tags for Discord embed -->
+  <meta property="og:title" content="Meow Cat 🐱">
+  <meta property="og:description" content="Click to see the cutest cat ever.">
+  <meta property="og:image" content="https://kittykat.uk/picture.png">
+  <meta property="og:url" content="https://kittykat.uk">
+  <meta name="theme-color" content="#FF69B4"> <!-- Optional Discord embed color -->
+
+  <!-- Twitter card (optional) -->
+  <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
-  <img src="picture.png" alt="My Picture" style="max-width:100%;">
+  <img src="picture.png" alt="Cute Cat" style="max-width: 100%;">
 </body>
 </html>
