--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Meow Cat</title>
 
   <!-- Open Graph meta tags for Discord embed -->
-  <meta property="og:title" content="Meow Cat 🐱">
-  <meta property="og:description" content="Click to see the cutest cat ever.">
+  <meta property="og:title" content="Kohaze = 🦭">
+  <meta property="og:description" content="Click to little kohaze :3.">
   <meta property="og:image" content="https://kittykat.uk/picture.png">
   <meta property="og:url" content="https://kittykat.uk">
   <meta name="theme-color" content="#FF69B4"> <!-- Optional Discord embed color -->
