--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Meow Cat</title>
+  <title>KittyKat</title>
 
-  <!-- Open Graph meta tags for Discord embed -->
-  <meta property="og:title" content="Kohaze = 🦭">
-  <meta property="og:description" content="Click to little kohaze :3.">
+  <!-- 💬 This is what tells Discord how to embed your page -->
+  <meta property="og:title" content="KittyKat 🐾">
+  <meta property="og:description" content="Kohaze = 🦭.">
   <meta property="og:image" content="https://kittykat.uk/picture.png">
   <meta property="og:url" content="https://kittykat.uk">
-  <meta name="theme-color" content="#FF69B4"> <!-- Optional Discord embed color -->
+  <meta name="theme-color" content="#ff69b4">
 
-  <!-- Twitter card (optional) -->
+  <!-- Optional for Twitter -->
   <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
-  <img src="picture.png" alt="Cute Cat" style="max-width: 100%;">
+  <img src="picture.png" alt="Kitty" style="max-width: 100%;">
 </body>
 </html>
