--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>KittyKat</title>
+  <title>KittyKat :3</title>
 
   <!-- 💬 This is what tells Discord how to embed your page -->
   <meta property="og:title" content="KittyKat 🐾">
